@startuml Sistema_Biblioteca_Models

' Configurações do diagrama
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontSize 9
skinparam packageStyle rectangle

title Sistema de Biblioteca - Modelos Backend (Atualizado)\nImplementação com Correções Arquiteturais Aplicadas

' ========== CLASSE ABSTRATA PRINCIPAL ==========

abstract class Usuario {
    - _id: Optional[int]
    - _nome: str
    - _email: str
    - _senha: str (MD5)
    - _ativo: bool
    - _data_cadastro: Optional[datetime]
    - _data_atualizacao: Optional[datetime]
    
    ' Properties (getters/setters)
    + id: @property Optional[int]
    + nome: @property str
    + email: @property str  
    + senha: @property str
    + ativo: @property bool
    + data_cadastro: @property Optional[datetime]
    + data_atualizacao: @property Optional[datetime]
    
    + verificar_senha(senha: str): bool
    + validar(): tuple[bool, str]
    + salvar(): tuple[bool, str]
    + excluir(): tuple[bool, str]
    + ativar(): tuple[bool, str]
    + to_dict(): dict
    
    ' Properties e Métodos Abstratos (devem ser implementados pelas subclasses)
    + {abstract} tipo_usuario: @property str
    + {abstract} validar_dados_especificos(): tuple[bool, str]
    + {abstract} obter_dados_para_banco(): dict
    
    ' Métodos estáticos
    + autenticar(email, senha): tuple[bool, Optional[Usuario], str]
    + listar_todos(limite, incluir_inativos): list[Usuario]
    + buscar_por_email(email): Optional[Usuario]
    + buscar_por_id(id): Optional[Usuario]
    + _from_db_row(row): Usuario
    
    ' Métodos privados
    - _criptografar_senha(senha): str
    - _eh_senha_criptografada(senha): bool
    - _inserir(db): tuple[bool, str]
    - _atualizar(db): tuple[bool, str]
    - _email_existe(db, email): bool
    - _existe_por_id(db, id): bool
    - _buscar_ultimo_id(db): Optional[int]
}

' ========== CLASSES ESPECIALIZADAS (HERANÇA) ==========

class Aluno {
    - _matricula: str
    - _curso: str
    
    ' Implementação dos métodos abstratos da classe pai
    + tipo_usuario: @property str = "Aluno"
    + validar_dados_especificos(): tuple[bool, str]
    + obter_dados_para_banco(): dict
    
    ' Properties específicas do Aluno
    + matricula: @property str
    + curso: @property str
}

class Professor {
    - _matricula: str
    - _departamento: str
    
    ' Implementação dos métodos abstratos da classe pai
    + tipo_usuario: @property str = "Professor"
    + validar_dados_especificos(): tuple[bool, str]
    + obter_dados_para_banco(): dict
    
    ' Properties específicas do Professor
    + matricula: @property str
    + departamento: @property str
}

class Bibliotecario {
    ' Implementação dos métodos abstratos da classe pai
    + tipo_usuario: @property str = "Bibliotecario"
    + validar_dados_especificos(): tuple[bool, str]
    + obter_dados_para_banco(): dict
}

class Livro {
    - _id: Optional[int]
    - _nome: str
    - autor: str
    - _isbn: str
    - genero: str
    - data_cadastro: Optional[datetime]
    - data_atualizacao: Optional[datetime]
    - _ativo: bool
    - quantidade_total: int
    - _quantidade_disponivel: Optional[int]
    - _quantidade_emprestada: Optional[int]
    
    ' Properties (getters/setters)
    + id: @property Optional[int]
    + nome: @property str
    + isbn: @property str
    + ativo: @property bool
    
    ' Properties calculadas (somente getters)
    + quantidade_disponivel: @property int
    + quantidade_emprestada: @property int
    + disponivel_para_emprestimo: @property bool
    
    + validar(): tuple[bool, str]
    + salvar(): tuple[bool, str]
    + excluir(): tuple[bool, str]
    + reativar(): tuple[bool, str]
    + deletar(): tuple[bool, str]
    + pode_ser_deletado(): tuple[bool, str]
    + deletar_com_verificacao(): tuple[bool, str]
    + to_dict(): dict
    + from_dict(data): Livro
    
    ' Métodos estáticos
    + listar_todos(limite, incluir_inativos): list[Livro]
    + listar_com_estoque(): list[Livro]
    + buscar_por_isbn(isbn): Optional[Livro]
    + buscar_por_id(id): Optional[Livro]
    + _from_db_row(row): Livro
    + _from_estoque_row(row): Livro
    
    ' Métodos privados
    - _inserir(db): tuple[bool, str]
    - _atualizar(db): tuple[bool, str]
    - _isbn_existe(db, isbn): bool
    - _existe_por_id(db, id): bool
    - _buscar_ultimo_id(db): Optional[int]
}

class Emprestimo {
    - id: Optional[int]
    - usuario_id: int
    - livro_id: int
    - biblioteca_id: int
    - data_emprestimo: datetime
    - dias_emprestimo: int
    - data_prevista_devolucao: datetime
    - data_devolucao: Optional[datetime]
    - status: str
    - tipo: str
    - valor_multa: float
    - renovacoes: int
    - max_renovacoes: int
    - observacoes: Optional[str]
    
    + validar_dados(): tuple[bool, str]
    + esta_em_atraso(): bool
    + dias_atraso(): int
    + calcular_multa(valor_diario): float
    + atualizar_status(): void
    + pode_renovar(): tuple[bool, str]
    + renovar(dias_adicionais): tuple[bool, str]
    + devolver(data_devolucao, observacoes_devolucao): tuple[bool, str]
    + cancelar(motivo): tuple[bool, str]
    + salvar(): tuple[bool, str]
    + obter_dias_restantes(): int
    
    ' Métodos estáticos
    + listar_por_usuario(usuario_id, apenas_ativos): List[Emprestimo]
    + buscar_por_usuario(usuario_id, apenas_ativos): List[Emprestimo]
    + buscar_por_id(emprestimo_id): Optional[Emprestimo]
    + obter_historico_usuario_completo(usuario_id): List[dict]
    + verificar_emprestimos_atrasados(usuario_id): List[dict]
    + contar_emprestimos_ativos_por_livro(livro_id): int
    + estatisticas_biblioteca(biblioteca_id): dict
}

class Reserva {
    - id: Optional[int]
    - usuario_id: int
    - livro_id: int
    - data_reserva: datetime
    - status: str
    + FILAS_POR_LIVRO: dict
    
    + salvar(): tuple[bool, str]
    + cancelar(): tuple[bool, str]
    + marcar_atendida(): tuple[bool, str]
    
    ' Métodos estáticos
    + proxima_para_livro(livro_id): Optional[Reserva]
    + listar_por_livro(livro_id): List[Reserva]
    + listar_ativas(livro_id): List[Reserva]
}

class Avaliacao {
    - _id: Optional[int]
    - livro_id: int
    - usuario_id: int
    - nota: int (1-5)
    - comentario: Optional[str]
    - data_avaliacao: datetime
    - _ativa: bool
    - emprestimo_id: Optional[int]
    
    ' Properties (getters/setters)
    + id: @property Optional[int]
    + ativa: @property bool
    
    + validar(): tuple[bool, str]
    + salvar(): tuple[bool, str]
    + excluir(): tuple[bool, str]
    
    ' Métodos estáticos
    + listar_por_livro(livro_id): list[Avaliacao]
    + listar_por_usuario(usuario_id): list[dict]
    + listar_por_emprestimo(emprestimo_id): list[Avaliacao]
    + calcular_media_livro(livro_id): float
    + _from_db_row(row): Avaliacao
    
    ' Métodos privados
    - _usuario_ja_avaliou(db): bool
    - _buscar_ultimo_id(db): int
}

class Notificacao {
    - _id: Optional[int]
    - usuario_id: int
    - tipo: str
    - titulo: str
    - mensagem: str
    - status: str
    - data_criacao: datetime
    - data_leitura: Optional[datetime]
    - _ativa: bool
    - livro_id: Optional[int]
    
    + validar(): tuple[bool, str]
    + salvar(): tuple[bool, str]
    + marcar_como_lida(): tuple[bool, str]
    + arquivar(): tuple[bool, str]
    + excluir(): tuple[bool, str]
    
    ' Métodos estáticos
    + listar_por_usuario(usuario_id, apenas_nao_lidas): list[Notificacao]
    + contar_nao_lidas(usuario_id): int
    + criar_notificacao_sistema(usuario_id, titulo, mensagem, livro_id): Notificacao
    + _from_db_row(row): Notificacao
    
    ' Métodos privados
    - _buscar_ultimo_id(db): int
}

' ========== RELACIONAMENTOS ==========

' Relacionamentos de Herança (Polimorfismo)
Usuario <|-- Aluno : "herda"
Usuario <|-- Professor : "herda"
Usuario <|-- Bibliotecario : "herda"

' Relacionamentos de Composição/Agregação
Usuario ||--o{ Emprestimo : "1 para muitos"
Livro ||--o{ Emprestimo : "1 para muitos"

Usuario ||--o{ Reserva : "1 para muitos"
Livro ||--o{ Reserva : "1 para muitos"

Usuario ||--o{ Avaliacao : "1 para muitos"
Livro ||--o{ Avaliacao : "1 para muitos"
Emprestimo ||--o{ Avaliacao : "0..1 para muitos"

Usuario ||--o{ Notificacao : "1 para muitos"
Livro ||--o{ Notificacao : "0..1 para muitos"


@enduml